--- a/themes/supersimple/assets/styles/shortcodes.scss
+++ b/themes/supersimple/assets/styles/shortcodes.scss
@@ -50,17 +50,21 @@ figure {
     border-radius: $border-big;
     overflow: hidden;
     background-color: $c9;
+    position: relative;
 
     video {
       width: 100%;
+      display: block;
     }
+
     progress {
       width: 100%;
-      height: 7px;
+      height: 6px;
       display: block;
       margin: 0;
-      margin-top: -6px;
       border: none;
+      cursor: pointer;
+      transition: 0.2s;
 
       &::-webkit-progress-bar {
         background-color: $c9;
@@ -69,13 +73,17 @@ figure {
       &::-webkit-progress-value {
         background-color: $p3;
       }
-      
+
       &::-moz-progress-bar {
         background-color: $p3;
       }
 
       &::-ms-fill {
         background-color: $p3;
+      }
+
+      &:hover {
+        transform: scaleY(4);
       }
     }
   }
