--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -11,7 +11,7 @@
             <div class="footer-label">
                 About
             </div>
-            I’m an undergraduate student at the University of Washington studying electrical engineering. I love working on projects involving electronics, software and design.
+            I’m a researcher at the University of Washington's CS Department. I love working on projects involving electronics, software and design.
             <div class="footer-spacer"></div>
             Right now, I work on the DCGR and WISP projects at the UW Sensor Systems Lab.
         </div>
