--- a/themes/supersimple/layouts/partials/header.html
+++ b/themes/supersimple/layouts/partials/header.html
@@ -50,7 +50,7 @@
           for (let entry of entries) {
             const { width, height } = entry.contentRect;
             canvas.width = width / 4;
-            canvas.height = height / 4;
+            canvas.height = height / 4 + 1;
           }
         });
         resizeObserver.observe(canvasContainer);
