--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -11,9 +11,9 @@
             <div class="footer-label">
                 About
             </div>
-            I’m a researcher at the University of Washington's CS Department. I love working on projects involving electronics, software and design.
+            I’m an incoming PhD student to MIT EECS. I have a BS in Electrical Engineering from the University of Washington.
             <div class="footer-spacer"></div>
-            Right now, I work on the DCGR and WISP projects at the UW Sensor Systems Lab.
+            I love working on projects involving electronics, software and design.
         </div>
         <div class="footer-col col-2">
             <div class="footer-label">
