--- a/themes/supersimple/layouts/shortcodes/connect-card.html
+++ b/themes/supersimple/layouts/shortcodes/connect-card.html
@@ -6,9 +6,7 @@
     <h3>Rohan Menon</h3>
     <b>rohan@rohanmenon.com</b>
     <p>
-      An engineering student with a focus on embedded devices, sensors, and
-      wireless technologies who thrives in fast-paced, collaborative
-      environments.
+      An engineering graduate with a focus on embedded devices, software development, and networking who loves working on challenging problems in fast-paced collaborative teams.
     </p>
     <a class="link-button" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rohansmenon/lets-talk?hide_event_type_details=1'});return false;">
       {{ partial "icon" "video" }}
