--- a/themes/supersimple/layouts/shortcodes/fig.html
+++ b/themes/supersimple/layouts/shortcodes/fig.html
@@ -10,7 +10,7 @@
     {{- if .Get "link" -}}
         <a href="{{ .Get "link" }}"{{ with .Get "target" }} target="{{ . }}"{{ end }}{{ with .Get "rel" }} rel="{{ . }}"{{ end }}>
     {{- else -}}
-        <a href="{{ (.Get "src") }}"{{ with .Get "target" }} target="{{ . }}"{{ end }}{{ with .Get "rel" }} rel="{{ . }}"{{ end }}>
+        <a href='{{ (resources.Get (.Get "src")).RelPermalink }}' >
     {{- end -}}
     <img src="{{ $src }}"
          {{- if or (.Get "alt") (.Get "caption") }}
