Added Hugo attribution

--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -37,8 +37,15 @@
                     {{ partial "icon-small" "arrow_up_pixel" }}
                 </span>
             </a>
-            <div class="footer-year">
-                {{/* {{ now.Format "2006" }} Rohan Menon */}}
+            <div>
+                <div class="footer-spacer"></div>
+                Built with
+                <a
+                    style="padding-right: 4px"
+                    href="https://gohugo.io"
+                    target="_blank"
+                    >Hugo</a
+                >
             </div>
         </div>
     </div>
