--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -8,7 +8,7 @@
     <div class="footer-content">
         <div class="footer-col col-1">
             <div class="footer-label">About</div>
-            I’m a first year PhD student in Signal Kinetics at the MIT Media
+            I’m a second year PhD student in Signal Kinetics at the MIT Media
             Lab, focusing on wireless sensing and communication.
             <div class="footer-spacer"></div>
             I love working on projects involving electronics, software and
