--- a/themes/supersimple/assets/styles/typography.scss
+++ b/themes/supersimple/assets/styles/typography.scss
@@ -57,8 +57,26 @@
 p,
 li {
   font-size: 1.2rem;
+  line-height: 1.45;
+  color: $c2;
+}
+
+p {
+  margin: 1em 0;
+}
+
+ol {
+  list-style-type: decimal;
+  padding-left: 1.4rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  font-size: 1.1rem;
   line-height: 1.35;
   color: $c4;
+  li {
+    padding-left: 0.7rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 h1 {
