--- a/themes/supersimple/assets/styles/global.scss
+++ b/themes/supersimple/assets/styles/global.scss
@@ -19,7 +19,7 @@ $c0: saturate2(lighten(#0f0f0f, 5%));
 $c1: saturate2(lighten(#141414, 4%));
 $c2: saturate2(lighten(#303030, 3%));
 $c3: saturate2(lighten(#484848, 2%));
-$c4: saturate2(lighten(#606060, 1%));
+$c4: saturate2(lighten(#60605d, 1%));
 $c5: saturate2(darken(#787878, 1%));
 $c6: saturate(darken(#909090, 2%));
 $c7: saturate(darken(#a8a8a8, 2%));
